Fixing alignment to center the projects

--- a/css/style.css
+++ b/css/style.css
@@ -650,7 +650,7 @@ a.contact_btn:hover {
     display: inline-block;
     padding-left: 20px;
     padding-right: 20px;
-    margin-bottom: 20px;
+    margin: 10px auto;
     width: min-content;
 }
 
